--- a/sai kiran html/Portfolio.html
+++ b/sai kiran html/Portfolio.html
@@ -3,19 +3,54 @@
 <head>
     <title>Portfolio Webpage</title>
 </head>
+<style>
+    h1 {
+        color: white;
+        background-color: transparent;
+        line-height: 4;
+
+    }
+
+    a {
+        color: whitesmoke;
+        background-color: transparent;
+        line-height: 4;
+        border-bottom-color: white;
+
+    }
+
+    h2 {
+        color: white;
+        background-color: transparent;
+        line-height: 3;
+
+
+    }
+</style>
 
 <body>
+
+    <body background="C:\Users\drpra\Desktop\react practice\bgp.jpg"></body>
+
     <center>
-        <h1>My Portfolio Website</h1>
+        <h1><b>My Portfolio Website!</b></h1>
 
-        <br>
-
-        <h5>Home | About | Services | Achievements</h5>
+        <a href="home.html" target="_self">Home</a> | <a href="about me.html" target="_self">About Me</a> | <a
+            href="Achievements.html" target="_self">Achievements</a> | <a href="connect.html" target="_self">Connect</a>
     </center>
 
     <br>
 
-    <h2><b>Welcome to my Website</b></h2>
+    <h2>
+        <center>Hello and Welcome!</center>
+
+        <br>
+
+        <center>I am Sai Kiran and I'm studying Computer Science at the Kent State University, concentrating
+            in UI design and reserach.</center>
+
+        <center>Take a look at my work through the tabs :)</center>
+    </h2>
 </body>
 
 </html>
