--- a/sai kiran html/list.html
+++ b/sai kiran html/list.html
@@ -6,6 +6,7 @@
 
 <body>
     <h1>Kent State University</h1>
+    <h1>This is Dummy h1 tag</h1>
     <img src="C:\Users\drpra\Documents\ksu.jpg" height="300" width="300">
     <ol>
         <p>types of courses</p>
